# Wayfinder

./: .gitignore  README.md  index.html  package-lock.json  package.json
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  wayfinder_dev.db
backend/app/: __init__.py  config.py  main.py
backend/tests/: conftest.py  test_agent_run_completeness_property.py  test_auth.py  test_config.py  test_coordinator_node.py  test_decision_engine.py  test_decision_engine_clamping.py  test_decision_engine_properties.py  test_decision_engine_property.py  test_decision_engine_property2_normalization.py  test_decision_engine_property4_rejection.py  test_decision_engine_score_property.py  test_decision_ledger.py  test_decision_persistence.py  test_decision_persistence_roundtrip_property.py  test_decision_weights.py  test_destination_narration_invariance_property.py  test_destination_node.py  test_endpoint_shape_alignment.py  test_eval_harness.py  test_evaluation_metric_coverage_property.py  test_explanation_coverage_property.py  test_flight_hotel_rationale_presence_property.py  test_graph_assembly.py  test_graph_composition.py  test_itinerary_node.py  test_japan_end_to_end_integration.py  test_japan_golden_scenario_fixture.py  test_ledger_additivity_property.py  test_ledger_inconsistency_and_persistence_failure.py  test_ledger_one_contribution_per_feature_property.py  test_llm_provider_vendor_switch.py  test_llm_providers.py  test_loaded_preferences_not_rerequested_property.py  test_mcp_server_integration.py  test_memory_layer.py  (+27 more)
src/: App.tsx  (+1 more)
(+78 files in other folders)
