[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wayfinder-backend"
version = "0.1.0"
description = "Wayfinder Travel Planner — multi-agent AI travel consultant backend (FastAPI + Pydantic v2)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "sqlalchemy>=2.0,<2.1",
    "psycopg[binary]>=3.2,<4",
    "alembic>=1.14,<2",
    "redis>=5.2,<6",
    "ortools>=9.11,<10",
    "langgraph>=0.2.60,<0.3",
    "langchain-core>=0.3,<0.4",
    "httpx>=0.28,<1",
    "pyjwt[crypto]>=2.10,<3",
    "mcp>=1.2,<2",
]

[project.optional-dependencies]
test = [
    "hypothesis>=6.122,<7",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<0.26",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
# Allow `import app.*` when running pytest from the backend/ directory.
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
